# upon

./: Cargo.toml  README.md  RELEASES.md  SYNTAX.md  onedoc.toml
.github/workflows/: build.yaml
benches/: Cargo.toml
benches/benchdata/: handlebars.html  liquid.html  tinytemplate.html
benches/benchdata/basic/: liquid.html  tera.html  tinytemplate.html
benches/benchdata/filters/: handlebars.html  tera.html
benches/benches/: basic.rs  engines.rs
benches/benches/benchdata/: handlebars.html  liquid.html  tinytemplate.html
benches/src/: context.rs  lib.rs  tests.rs
benches/src/testdata/: basic_handlebars.golden  basic_minijinja.golden  filters_handlebars.golden  filters_minijinja.golden  filters_upon.golden  minijinja.golden  tinytemplate.golden  upon.golden
docs/: README_TEMPLATE.md  SYNTAX_TEMPLATE.md
examples/: README.md  custom_template_store.rs  escape-html.rs  escape_html.rs  file-loader.rs  filters.rs  include-str.rs  quick.rs  render_to_writer.rs  runtime_templates.rs  serde.rs  static_templates.rs  syntax.rs
examples/templates/: footer.html  header.html  index.html
fuzz/: Cargo.toml  README.md
fuzz/seeds/: block-for-list  block-if  block-if-else  comment  expr-lit-float  expr-lit-integer-hex  expr-lit-integer-oct  expr-path
fuzz/seeds/compile/: block-for-map  block-with  expr-lit-integer-dec  expr-lit-string  expr-optional-chain
fuzz/src/: compile.rs  render.rs
src/: ast.rs  compile.rs  data.rs  engine.rs  env.rs  error.rs  fmt.rs  instr.rs  lex.rs  lib.rs  macros.rs  parse.rs  render.rs  result.rs  span.rs  syntax.rs
src/ast/: mod.rs  result.rs  span.rs
src/ast/testdata/: parse_expr_call.golden  parse_expr_double_call.golden  parse_expr_value.golden  parse_expr_value_dotted.golden  parse_expr_value_dotted_call.golden
src/compile/: lex.rs  mod.rs  parse.rs
src/compile/search/: mod.rs
src/compile/search/ahocorasick/: build.rs  mod.rs  state.rs
src/filters/: args.rs  builtins.rs  impls.rs  mod.rs
src/render/: core.rs  fmt.rs  iter.rs  mod.rs  stack.rs  value.rs
src/syntax/: mod.rs
src/syntax/ahocorasick/: build.rs  mod.rs  state.rs
src/testdata/: compile_template_empty.golden  compile_template_for_block.golden  compile_template_if_then_block.golden  compile_template_if_then_else_block.golden  compile_template_inline_expr.golden  compile_template_raw.golden
src/types/: ast.rs  mod.rs  prog.rs  program.rs  span.rs  syntax.rs
src/value/: cow.rs  from.rs  mod.rs
src/value/ser/: list.rs  map.rs  mod.rs  variants.rs
tests/: builtins.rs  compile.rs  engine.rs  filters.rs  lex.rs  macros.rs  render.rs  render_non_serde.rs  to_value.rs
tests/helpers/: mod.rs  writer.rs
tools/gen-filters/: Cargo.toml
tools/gen-filters/src/: main.rs
tools/gen-readme/: Cargo.toml
tools/gen-readme/src/: README_TEMPLATE.md  SYNTAX_TEMPLATE.md  main.rs
