[package]
name = "upon"
version = "0.2.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
description = "A simple, powerful template engine"
readme = "README.md"
repository = "https://github.com/rossmacarthur/upon"
license = "MIT OR Apache-2.0"
keywords = ["string", "format", "template", "engine"]
categories = ["template-engine"]

[features]
default = ["filters", "serde", "unicode"]

# Enable filters
# --------------
#   If disabled then filters will not be available for use in templates
#   (Note: this does not affect value formatters)
filters = []

# Enable serde support
# --------------------
#   If disabled then you will have to use .render{_to_writer}_from() to render templates
#   Note: Disabling this also disables the `value!` macro
serde = ["dep:serde"]

# Enable better unicode support
# -----------------------------
#   This is currently only affects error formatting
#   If disabled then chars().count() will be used instead
unicode = ["dep:unicode-width"]

[dependencies]
serde = { version = "1.0.137", optional = true }
unicode-width = { version = "0.1.9", optional = true }

[dev-dependencies]
serde = { version = "1.0.137", features = ["derive"] }

[workspace]
members = ["benches", "tools/*"]
