[package]
name = "upon"
version = "0.4.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
rust-version = "1.60"
description = "A lightweight and powerful template engine"
readme = "README.md"
repository = "https://github.com/rossmacarthur/upon"
license = "MIT OR Apache-2.0"
keywords = ["string", "format", "template", "engine"]
categories = ["template-engine"]
include = ["src/**/*", "LICENSE-*", "README.md"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0.137", optional = true }
unicode-ident = { version = "1.0.5", optional = true }
unicode-width = { version = "0.1.9", optional = true }

[dev-dependencies]
serde = { version = "1.0.137", features = ["derive"] }

[features]
default = ["filters", "serde", "unicode"]

# Enables support for filters in templates. This does not affect value
# formatters. Disabling this will improve compile times.
filters = []

# Enables all serde support and pulls in the `serde` crate as a dependency. If
# disabled then you can use `.render_from()` to render templates and construct
# the context using `Value`'s '`From` impls.
serde = ["dep:serde"]

# Allows unicode identifiers in templates and enables improved error
# formatting.
unicode = ["dep:unicode-ident", "dep:unicode-width"]

[workspace]
members = ["benches", "fuzz", "tools/*"]
