[package]
name = "benches"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
handlebars = "4.3.1"
liquid = "0.26.0"
minijinja = "0.17.0"
rand = "0.8.5"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
tera = "1.16.0"
tinytemplate = "1.2.1"
upon = { path = ".." }

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }
goldie = "0.3.0"

[[bench]]
name = "engines"
harness = false
