[package]
name = "benches"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
handlebars = "4.3.4"
liquid = "0.26.0"
minijinja = "0.23.0"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tera = "1.17.1"
tinytemplate = "1.2.1"
upon = { path = ".." }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
goldie = "0.4.0"

[[bench]]
name = "engines"
harness = false
