[package]
name = "benches"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
handlebars = "4.3.7"
liquid = "0.26.4"
minijinja = "1.0.5"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.103"
tera = "1.19.0"
tinytemplate = "1.2.1"
upon = { path = ".." }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
goldie = "0.4.3"

[[bench]]
name = "engines"
harness = false
