[package]
name = "fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.3.0", features = ["derive"] }
libfuzzer-sys = "0.4.6"
serde = { version = "1.0.137", features = ["derive"] }
upon = { path = ".." }

[[bin]]
name = "compile"
path = "src/compile.rs"
test = false
doc = false

[[bin]]
name = "render"
path = "src/render.rs"
test = false
doc = false
